adding one more dummy element

--- a/app/src/main/res/menu/partial_drawer_entries.xml
+++ b/app/src/main/res/menu/partial_drawer_entries.xml
@@ -127,4 +127,17 @@
             android:orderInCategory="200"
             android:title=""/>
     </group>
+
+    <!--
+      one more dummy element required
+      After making the quota details opaque
+      it is hiding some part of the element of the drawer above it
+    -->
+    <group>
+        <item
+            android:enabled="false"
+            android:orderInCategory="200"
+            android:title=""/>
+    </group>
+
 </menu>
