Add assistant to the navbar
Signed-off-by: alperozturk <alper_ozturk@proton.me>

--- a/app/src/main/res/menu/partial_drawer_entries.xml
+++ b/app/src/main/res/menu/partial_drawer_entries.xml
@@ -26,10 +26,17 @@
         android:id="@+id/drawer_menu_standard"
         android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_assistant"
+            android:icon="@drawable/ic_assistant"
+            android:orderInCategory="0"
+            android:title="@string/drawer_item_assistant" />
+
+        <item
             android:id="@+id/nav_all_files"
             android:icon="@drawable/all_files"
             android:orderInCategory="0"
             android:title="@string/drawer_item_all_files" />
+
         <item
             android:id="@+id/nav_personal_files"
             android:icon="@drawable/ic_user"
