Add Assistant under the notification in drawer for branded clients
Signed-off-by: alperozturk <alper_ozturk@proton.me>

--- a/app/src/main/res/menu/partial_drawer_entries.xml
+++ b/app/src/main/res/menu/partial_drawer_entries.xml
@@ -25,6 +25,7 @@
     <group
         android:id="@+id/drawer_menu_standard"
         android:checkableBehavior="single">
+
         <item
             android:id="@+id/nav_all_files"
             android:icon="@drawable/all_files"
@@ -75,6 +76,13 @@
             android:id="@+id/nav_notifications"
             android:icon="@drawable/nav_notifications"
             android:title="@string/drawer_item_notifications"/>
+
+        <item
+            android:id="@+id/nav_assistant"
+            android:icon="@drawable/ic_assistant"
+            android:orderInCategory="0"
+            android:title="@string/drawer_item_assistant" />
+
         <item
             android:id="@+id/nav_uploads"
             android:icon="@drawable/uploads"
