--- a/app/src/main/res/drawable/file_text.xml
+++ b/app/src/main/res/drawable/file_text.xml
@@ -12,6 +12,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#969696"
+        android:fillColor="@color/text_color"
         android:pathData="M19,3L5,3c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2L21,5c0,-1.1 -0.9,-2 -2,-2zM14,17L7,17v-2h7v2zM17,13L7,13v-2h10v2zM17,9L7,9L7,7h10v2z" />
 </vector>
