--- a/app/src/main/res/drawable/folder_star_32dp.xml
+++ b/app/src/main/res/drawable/folder_star_32dp.xml
@@ -1,4 +1,9 @@
-<!-- drawable/folder_star.xml -->
+<!--
+  ~ Nextcloud - Android Client
+  ~
+  ~ SPDX-FileCopyrightText: 2018-2024 Google LLC
+  ~ SPDX-License-Identifier: Apache-2.0
+-->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="32dp"
     android:width="32dp"
