--- a/app/src/main/res/menu/synced_folders_adapter.xml
+++ b/app/src/main/res/menu/synced_folders_adapter.xml
@@ -1,21 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  Nextcloud Android client application
-
-  Copyright (C) 2019 Andy Scherzinger
-
-  This program is free software: you can redistribute it and/or modify
-  it under the terms of the GNU General Public License as published by
-  the Free Software Foundation, either version 3 of the License, or
-  (at your option) any later version.
-
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-  GNU General Public License for more details.
-
-  You should have received a copy of the GNU General Public License
-  along with this program. If not, see <https://www.gnu.org/licenses/>.
+  ~ Nextcloud - Android Client
+  ~
+  ~ SPDX-FileCopyrightText: 2019 Andy Scherzinger <info@andy-scherzinger>
+  ~ SPDX-License-Identifier: AGPL-3.0-or-later
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
