--- a/app/src/main/res/drawable/add_to_home_screen.xml
+++ b/app/src/main/res/drawable/add_to_home_screen.xml
@@ -1,25 +1,17 @@
 <!--
-  Nextcloud Android client application
-
-  Copyright (C) 2022 Nextcloud.
-
-  This program is free software; you can redistribute it and/or
-  modify it under the terms of the GNU AFFERO GENERAL PUBLIC LICENSE
-  License as published by the Free Software Foundation; either
-  version 3 of the License, or any later version.
-
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU AFFERO GENERAL PUBLIC LICENSE for more details.
-
-  You should have received a copy of the GNU Affero General Public
-  License along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
-  Icon provided by Android Material Library in Apache License 2.0
+  ~ Nextcloud - Android Client
+  ~
+  ~ SPDX-FileCopyrightText: 2018-2024 Google LLC
+  ~ SPDX-License-Identifier: Apache-2.0
 -->
-<vector android:autoMirrored="true" android:height="24dp"
-    android:tint="#000000" android:viewportHeight="24"
-    android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M18,1.01L8,1c-1.1,0 -2,0.9 -2,2v3c0,0.55 0.45,1 1,1s1,-0.45 1,-1V5h10v14H8v-1c0,-0.55 -0.45,-1 -1,-1s-1,0.45 -1,1v3c0,1.1 0.9,2 2,2h10c1.1,0 2,-0.9 2,-2V3c0,-1.1 -0.9,-1.99 -2,-1.99zM11,15c0.55,0 1,-0.45 1,-1V9c0,-0.55 -0.45,-1 -1,-1H6c-0.55,0 -1,0.45 -1,1s0.45,1 1,1h2.59L3.7,14.89c-0.39,0.39 -0.39,1.02 0,1.41 0.39,0.39 1.02,0.39 1.41,0L10,11.41V14c0,0.55 0.45,1 1,1z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:autoMirrored="true"
+    android:tint="#000000"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M320,920Q287,920 263.5,896.5Q240,873 240,840L240,680L320,680L320,720L720,720L720,240L320,240L320,280L240,280L240,120Q240,87 263.5,63.5Q287,40 320,40L720,40Q753,40 776.5,63.5Q800,87 800,120L800,840Q800,873 776.5,896.5Q753,920 720,920L320,920ZM176,680L120,624L344,400L200,400L200,320L480,320L480,600L400,600L400,456L176,680Z" />
 </vector>
