--- a/app/src/main/res/layout/whats_new_webview_element.xml
+++ b/app/src/main/res/layout/whats_new_webview_element.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Nextcloud - Android Client
+  ~
+  ~ SPDX-FileCopyrightText: 2017 Mario Danic <mario@lovelyhq.com>
+  ~ SPDX-License-Identifier: AGPL-3.0-or-later
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <WebView
+        android:id="@+id/whatsNewWebView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/whatsNewWebView" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
