--- a/app/src/main/res/layout/files_picker.xml
+++ b/app/src/main/res/layout/files_picker.xml
@@ -38,11 +38,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
+        <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:contentDescription="@null"
-            android:src="@drawable/uploader_list_separator"/>
+            android:background="@color/list_divider_background"/>
 
     </LinearLayout>
 
