--- a/app/src/main/res/drawable/ic_edit.xml
+++ b/app/src/main/res/drawable/ic_edit.xml
@@ -5,13 +5,13 @@
   ~ SPDX-FileCopyrightText: 2019 Nextcloud GmbH
   ~ SPDX-License-Identifier: AGPL-3.0-or-later
 -->
-<vector xmlns:tools="http://schemas.android.com/tools"
-    android:autoMirrored="true"
-    android:height="24dp"
-    android:viewportHeight="24"
-    android:viewportWidth="24"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="24dp"
+    android:autoMirrored="true"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
     tools:ignore="VectorRaster">
     <path
         android:fillColor="#FF000000"
