--- a/app/src/main/res/drawable/ic_post_add.xml
+++ b/app/src/main/res/drawable/ic_post_add.xml
@@ -1,46 +1,16 @@
 <!--
+  ~ Nextcloud - Android Client
   ~
-  ~ Nextcloud Android client application
-  ~
-  ~ @author Tobias Kaminsky
-  ~ Copyright (C) 2020 Tobias Kaminsky
-  ~ Copyright (C) 2020 Nextcloud GmbH
-  ~
-  ~ This program is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU Affero General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ This program is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-  ~ GNU Affero General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU Affero General Public License
-  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
-  -->
-
-<vector xmlns:tools="http://schemas.android.com/tools"
-    android:autoMirrored="true"
-    android:height="24dp"
-    android:viewportHeight="24"
-    android:viewportWidth="24"
+  ~ SPDX-FileCopyrightText: 2018-2024 Google LLC
+  ~ SPDX-License-Identifier: Apache-2.0
+-->
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:ignore="VectorRaster">
+    android:height="24dp"
+    android:tint="#FF000000"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M17,19.22H5V7h7V5H5C3.9,5 3,5.9 3,7v12c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2v-7h-2V19.22z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M19,2h-2v3h-3c0.01,0.01 0,2 0,2h3v2.99c0.01,0.01 2,0 2,0V7h3V5h-3V2z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M7,9h8v2h-8z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M7,12l0,2l8,0l0,-2l-3,0z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M7,15h8v2h-8z" />
+        android:fillColor="@android:color/white"
+        android:pathData="M200,840Q167,840 143.5,816.5Q120,793 120,760L120,200Q120,167 143.5,143.5Q167,120 200,120L560,120L560,200L200,200Q200,200 200,200Q200,200 200,200L200,760Q200,760 200,760Q200,760 200,760L760,760Q760,760 760,760Q760,760 760,760L760,400L840,400L840,760Q840,793 816.5,816.5Q793,840 760,840L200,840ZM320,680L320,600L640,600L640,680L320,680ZM320,560L320,480L640,480L640,560L320,560ZM320,440L320,360L640,360L640,440L320,440ZM680,360L680,280L600,280L600,200L680,200L680,120L760,120L760,200L840,200L840,280L760,280L760,360L680,360Z" />
 </vector>
