--- a/app/src/main/res/drawable/ic_user_status_away.xml
+++ b/app/src/main/res/drawable/ic_user_status_away.xml
@@ -1,30 +1,17 @@
 <!--
-  Nextcloud Android client application
-
-  @author Tobias Kaminsky
-  Copyright (C) 2020 Tobias Kaminsky
-  Copyright (C) 2020 Nextcloud GmbH
-
-  This program is free software; you can redistribute it and/or
-  modify it under the terms of the GNU AFFERO GENERAL PUBLIC LICENSE
-  License as published by the Free Software Foundation; either
-  version 3 of the License, or any later version.
-
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU AFFERO GENERAL PUBLIC LICENSE for more details.
-
-  You should have received a copy of the GNU Affero General Public
-  License along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  ~ Nextcloud - Android Client
+  ~
+  ~ SPDX-FileCopyrightText: 2020 Tobias Kaminsky <tobias@kaminsky.me>
+  ~ SPDX-FileCopyrightText: 2020 Nextcloud GmbH
+  ~ SPDX-License-Identifier: AGPL-3.0-or-later
 -->
-<vector xmlns:tools="http://schemas.android.com/tools"
-    android:autoMirrored="true"
-    android:height="24dp"
-    android:viewportHeight="24"
-    android:viewportWidth="24"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="24dp"
+    android:autoMirrored="true"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
     tools:ignore="VectorRaster">
     <path
         android:fillColor="#f4a331"
