--- a/app/src/main/res/layout/upload_files_layout.xml
+++ b/app/src/main/res/layout/upload_files_layout.xml
@@ -39,11 +39,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
+        <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:src="@drawable/uploader_list_separator"
-            android:contentDescription="@null"/>
+            android:background="@color/list_divider_background"/>
 
     </LinearLayout>
 
