Add SPDX header
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/drawable/ic_locked_dots_small.xml
+++ b/app/src/main/res/drawable/ic_locked_dots_small.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Nextcloud - Android Client
   ~
-  ~ SPDX-FileCopyrightText: 2022 Álvaro Brey <alvaro.brey@nextcloud.com>
+  ~ SPDX-FileCopyrightText: 2022 Álvaro Brey <alvaro@alvarobrey.com>
   ~ SPDX-FileCopyrightText: 2022 Nextcloud GmbH
   ~ SPDX-License-Identifier: AGPL-3.0-or-later
 -->
