--- a/app/src/main/res/layout/grid_image.xml
+++ b/app/src/main/res/layout/grid_image.xml
@@ -4,7 +4,7 @@
   ~
   ~ SPDX-FileCopyrightText: 2023 Alper Ozturk <alper_ozturk@proton.me>
   ~ SPDX-FileCopyrightText: 2018-2022 Tobias Kaminsky <tobias@kaminsky.me>
-  ~ SPDX-FileCopyrightText: 2022 Álvaro Brey
+  ~ SPDX-FileCopyrightText: 2022 Álvaro Brey <alvaro@alvarobrey.com>
   ~ SPDX-License-Identifier: AGPL-3.0-or-later
 -->
 <LinearLayout
