--- a/app/src/main/res/layout/notification_list_item.xml
+++ b/app/src/main/res/layout/notification_list_item.xml
@@ -1,26 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Nextcloud Android client application
-
-  @author Tobias Kaminsky
-  @author TSI-mc
-  Copyright (C) 2023 Andy Scherzinger
-  Copyright (C) 2023 TSI-mc
-  Copyright (C) 2018 Tobias Kaminsky
-  Copyright (C) 2018 Nextcloud GmbH
-
-  This program is free software: you can redistribute it and/or modify
-  it under the terms of the GNU General Public License as published by
-  the Free Software Foundation, either version 3 of the License, or
-  (at your option) any later version.
-
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-  GNU General Public License for more details.
-
-  You should have received a copy of the GNU General Public License
-  along with this program. If not, see <https://www.gnu.org/licenses/>.
+  ~ Nextcloud Talk - Android Client
+  ~
+  ~ SPDX-FileCopyrightText: 2018-2024 Nextcloud GmbH and Nextcloud contributors
+  ~ SPDX-FileCopyrightText: 2023 Andy Scherzinger <info@andy-scherzinger.de>
+  ~ SPDX-FileCopyrightText: 2023 TSI-mc
+  ~ SPDX-FileCopyrightText: 2018 Tobias Kaminsky <tobias@kaminsky.me>
+  ~ SPDX-License-Identifier: GPL-3.0-or-later AND AGPL-3.0-or-later
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
