--- a/app/src/main/res/layout/share_activity.xml
+++ b/app/src/main/res/layout/share_activity.xml
@@ -4,7 +4,7 @@
   ~
   ~ SPDX-FileCopyrightText: 2020-2022 Tobias Kaminsky <tobias@kaminsky.me>
   ~ SPDX-FileCopyrightText: 2015 ownCloud Inc.
-  ~ SPDX-FileCopyrightText: 2015 masensio <masensio@solidgear.es>
+  ~ SPDX-FileCopyrightText: 2015 María Asensio Valverde <masensio@solidgear.es>
   ~ SPDX-License-Identifier: GPL-2.0-only AND AGPL-3.0-or-later
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
