--- a/app/src/main/res/layout/activity_manage_space.xml
+++ b/app/src/main/res/layout/activity_manage_space.xml
@@ -3,7 +3,7 @@
   ~ Nextcloud - Android Client
   ~
   ~ SPDX-FileCopyrightText: 2018 Andy Scherzinger <info@andy-scherzinger.de>
-  ~ SPDX-FileCopyrightText: 2016 Maria Asensio <masensio@solidgear.es>
+  ~ SPDX-FileCopyrightText: 2016 María Asensio Valverde <masensio@solidgear.es>
   ~ SPDX-FileCopyrightText: 2016 ownCloud Inc.
   ~ SPDX-License-Identifier: GPL-2.0-only AND AGPL-3.0-or-later
 -->
