--- a/app/src/main/res/layout/dialog_sso_grant_permission.xml
+++ b/app/src/main/res/layout/dialog_sso_grant_permission.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Nextcloud - Android Client
   ~
-  ~ SPDX-FileCopyrightText: 2018 Andy Scherzinger <info@andy-scherzinger>
+  ~ SPDX-FileCopyrightText: 2018 Andy Scherzinger <info@andy-scherzinger.de>
   ~ SPDX-License-Identifier: AGPL-3.0-or-later
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
