--- a/app/src/main/res/layout/preview_image_activity.xml
+++ b/app/src/main/res/layout/preview_image_activity.xml
@@ -5,7 +5,7 @@
   ~ SPDX-FileCopyrightText: 2018 Álvaro Brey <alvaro@alvarobrey.com>
   ~ SPDX-FileCopyrightText: 2018 Tobias Kaminsky <tobias@kaminsky.me>
   ~ SPDX-FileCopyrightText: 2016 Divay Prakash <divayprakash3@gmail.com>
-  ~ SPDX-FileCopyrightText: 2015 masensio <masensio@solidgear.es>
+  ~ SPDX-FileCopyrightText: 2015 María Asensio Valverde <masensio@solidgear.es>
   ~ SPDX-FileCopyrightText: 2015 ownCloud Inc.
   ~ SPDX-FileCopyrightText: 2013 David A. Velasco <dvelasco@solidgear.es>
   ~ SPDX-License-Identifier: GPL-2.0-only AND AGPL-3.0-or-later
