--- a/app/src/main/res/layout/ssl_untrusted_cert_layout.xml
+++ b/app/src/main/res/layout/ssl_untrusted_cert_layout.xml
@@ -5,7 +5,7 @@
   ~ SPDX-FileCopyrightText: 2017 Tobias Kaminsky <tobias@kaminsky.me>
   ~ SPDX-FileCopyrightText: 2015 Andy Scherzinger <info@andy-scherzinger.de>
   ~ SPDX-FileCopyrightText: 2015 ownCloud Inc.
-  ~ SPDX-FileCopyrightText: 2014 masensio <masensio@solidgear.es>
+  ~ SPDX-FileCopyrightText: 2014 María Asensio Valverde <masensio@solidgear.es>
   ~ SPDX-License-Identifier: GPL-2.0-only AND AGPL-3.0-or-later
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
