--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -53,13 +53,23 @@
             android:key="show_media_scan_notifications"/>
 	</PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/prefs_category_sync"
+        android:key="sync">
+    <Preference
+        android:title="@string/drawer_synced_folders"
+        android:key="syncedFolders"
+        android:summary="@string/prefs_sycned_folders_summary" />
+
+        <Preference
+            android:title="@string/internal_two_way_sync"
+            android:key="internal_two_way_sync"
+            android:summary="@string/prefs_two_way_sync_summary" />
+    </PreferenceCategory>
+
 	<PreferenceCategory
         android:title="@string/prefs_category_more"
         android:key="more">
-        <Preference
-            android:title="@string/drawer_synced_folders"
-            android:key="syncedFolders"
-            android:summary="@string/prefs_sycned_folders_summary" />
         <Preference
             android:title="@string/prefs_calendar_contacts"
             android:key="calendar_contacts"
