Fix license for new icon
Signed-off-by: alperozturk <alper_ozturk@proton.me>

--- a/app/src/main/res/drawable/ic_cloud_sync_off.xml
+++ b/app/src/main/res/drawable/ic_cloud_sync_off.xml
@@ -1,9 +1,9 @@
 <!--
   ~ Nextcloud - Android Client
   ~
-  ~ SPDX-FileCopyrightText: 2018-2024 Google LLC
-  ~ SPDX-License-Identifier: Apache-2.0
--->
+  ~ SPDX-FileCopyrightText: 2024 Alper Ozturk <alper.ozturk@nextcloud.com>
+  ~ SPDX-License-Identifier: AGPL-3.0-or-later
+  -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="24dp"
     android:width="24dp"
